<resources>
    <string name="app_name">My Application</string>
    <string name="search">SEARCH</string>
    <string name="dummy_text">Dummy text</string>
    <string name="title">Title</string>
    <string name="reason">Reason</string>
    <string name="read">Read</string>
    <string name="add_book">Add book</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel">cancel</string>
</resources>
